[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "myquant"
version = "11.0.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src", "external"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501", "W503", "E203"]

[tool.black]
line-length = 120
target-version = ['py311']
